tests/duarouter/errors/no_input_ignore/errors.duarouter
Warning: No route input specified or all routes were invalid.
